# homework3

./: .cproject  .project  HW2.2.1.cpp  HW2.2.2.cpp  HW2.2.3.cpp  hw2.3.1.cpp  hw2.3.2.cpp  hw2.5.1.cpp  hw2.5.2.cpp  hw2.5.3.cpp
2.10.2/ShapeCmake/: CMakeLists.txt  hw2.10.2.cpp  parallelogram.h  romb.cpp  shape.cpp  square.h  triangle.cpp  triangleisos.h
2.10/2.10.2/ShapeCmake/: CMakeLists.txt  parallelogram.cpp  quadrangle.cpp  quadrangle.h  rectangle.h  square.cpp  triangle.h  triangleequal.cpp  triangleequal.h  triangleisos.cpp  trianglerect.cpp  trianglerect.h
2.10/hw2.10.1/my_first_cmake_project/: CMakeLists.txt  my_first_cmake_program.cpp
2.9/: CMakeLists.txt  Nod_2.h  fraction_2.cpp  fraction_2.h  hw2.9.1.cpp  hw2.9.2.cpp  nod.cpp  nod.h  nok.cpp  nok.h
hw2.12/2.12.1/: CMakeLists.txt  extended_array.h  main.cpp
hw2.12/2.12.2/: CMakeLists.txt  extended_array.h  main.cpp
hw2.12/2.12.3/: CMakeLists.txt  extended_array.h  main.cpp
hw2.4.1/: hw2.4.1.cpp
hw2.4.2/: hw2.4.2.cpp
hw2.6/: projecthw2.pro
hw2.6/hw2.6.1/: hw2.6.1.cpp  math_func.cpp  math_func.h
hw2.6/hw2.6.2/: counter.cpp  counter.h  hw2.6.2.cpp
hw2.6/hw2.6.3/: hw2.6.3.cpp
hw2.6/hw2.6.3/Quadrangle/: parallelogram.h  rectangle.cpp  romb.h
hw2.6/hw2.6.3/Shape/: shape.h
hw2.7/: hw2.7.1.cpp  hw2.7.2.cpp  projecthw2.pro
hw2.8 — копия/: hw2.8.1.cpp  hw2.8.2.cpp  project1.pro
hw2.8 — копия/Except/: exceptfigure.cpp  exceptfigure.h
hw2.8 — копия/Quadrangle/: parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  romb.cpp  romb.h  square.cpp  square.h
hw2.8 — копия/Shape/: shape.cpp  shape.h
hw2.8 — копия/Triangle/: triangle.cpp  triangle.h  triangleequal.cpp  triangleequal.h  triangleisos.cpp  triangleisos.h  triangllerect.cpp  triangllerect.h
hw2.9/untitled/: CMakeLists.txt  Nod_2.cpp  fraction_2.cpp  hw2.9.1.cpp  hw2.9.2.cpp  nod.h
hw2_11_1/: CMakeLists.txt  greeter.cpp  greeter.h  main.cpp
hw2_11_2/: CMakeLists.txt  Leaver_global.h  leaver.cpp  leaver.h  main.cpp
kursovaya2/: CMakeLists.txt  airgroundrace.cpp  airgroundrace.h  airrace.cpp  airrace.h  boots.cpp  boots.h  broom.cpp  broom.h  camel.cpp  camel.h  camel_fast.cpp  camel_fast.h  carpet.cpp  carpet.h  centawr.cpp  centawr.h  eagle.cpp  eagle.h  ground.cpp  ground.h  groundrace.cpp  groundrace.h  lib_global.h  main.cpp  sky.cpp  sky.h
